2006-03-19 Borut Razem <borut.razem@siol.net>
	* plat/win32/gpsim.nsi: added share and lib\gtk-2.0\2.4.0\engines to
	  the package, use share\themes\MS-Windows\gtk-2.0\gtkrc as the
	  default gtkrc

2006-03-15 Scott Dattalo <scott@dattalo.com>
	* gui/gui_src.h, gui/gui_src_asm.cc:
	Added .lst files to the source browser.
	Added the "ColorHolder" class to wrap a GdkColor that can be
	changed and reverted back to its original value.
	The colors for the source browser are now saved.
	Line numbers, addresses, and opcodes in the margin can be
	selectively enabled
	* gui/gui_menu.cc:
	Example code for src browser configuration is now rendered in a
	SourcePage.
	* gui/gui_statusbar.cc, gui/gui_main.cc, gui/gui.h,
	gui/gui_regwin.cc, gui/gui_break.cc, gui/gui_profile.cc: The
	global 'gp' has been renamed gpGuiProcessor.

2006-03-15 Alain Portal <aportal@univ-montp2.fr>
	* src/p12.h: Remove redundant class scoping (causes errors with
	gcc-4.1)
	
2006-03-14 Borut Razem <borut.razem@siol.net>
	* src/dspic/makefile.mingw: added
	* plat/win32/gpsim.nsi: fixed typo

2006-03-13 Scott Dattalo <scott@dattalo.com>
	* src/processor.cc: hex files were not getting loaded properly.

2006-03-12 Scott Dattalo <scott@dattalo.com>
	* src/pic-ioports.cc: PIC TRIS writes were not getting traced.

2006-03-12 Borut Razem <borut.razem@siol.net>
	* config_win32.h.in: added #define _USE_MATH_DEFINES, so that M_PI
	  is defined in MSVC math.h

2006-03-12 Scott Dattalo <scott@dattalo.com>
	* gui/gui_src.h, gui/gui_src_asm.cc, gui/gui_menu.cc:
	- Gui Preferences for source browser is *almost* working now. It's
	possible to modify colors, but the state of the colors are not
	being saved in the gpsim config file. Also, the line number,
	address, opcode configuration is not completed.
	- The Source browser now utilized the text_view margin for
	displaying addresses and opcodes. Also, breakpoints changes the
	margin field text to red. (This duplicated the diamond indicator,